[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Slot.gd" type="Script" id=1]
[ext_resource path="res://scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://assets/Board.png" type="Texture" id=3]
[ext_resource path="res://assets/X_Sprite.png" type="Texture" id=4]
[ext_resource path="res://FRAMDIT.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://FRAMD.TTF" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88.5, 86.5 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 6 )

[node name="Tic-Tac-Toe Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Board" type="Sprite" parent="."]
position = Vector2( 312, 312 )
scale = Vector2( 19.2728, 19.2728 )
texture = ExtResource( 3 )

[node name="Slot 1" type="Area2D" parent="."]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot 1"]
position = Vector2( 89.5, 88.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Slot 1"]
position = Vector2( 89, 89 )
scale = Vector2( 4.55299, 4.55299 )

[node name="Slot 2" type="Area2D" parent="."]
position = Vector2( 214, 2 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot 2"]
position = Vector2( 89.5, 88.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Slot 2"]
position = Vector2( 89, 89 )
scale = Vector2( 4.55299, 4.55299 )

[node name="Slot 3" type="Area2D" parent="."]
position = Vector2( 424, 3 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot 3"]
position = Vector2( 89.5, 88.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Slot 3"]
position = Vector2( 89, 89 )
scale = Vector2( 4.55299, 4.55299 )

[node name="Slot 4" type="Area2D" parent="."]
position = Vector2( 1, 213 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot 4"]
position = Vector2( 89.5, 88.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Slot 4"]
position = Vector2( 89, 89 )
scale = Vector2( 4.55299, 4.55299 )

[node name="Slot 5" type="Area2D" parent="."]
position = Vector2( 213, 214 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot 5"]
position = Vector2( 89.5, 88.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Slot 5"]
position = Vector2( 89, 89 )
scale = Vector2( 4.55299, 4.55299 )

[node name="Slot 6" type="Area2D" parent="."]
position = Vector2( 426, 212 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot 6"]
position = Vector2( 89.5, 88.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Slot 6"]
position = Vector2( 89, 89 )
scale = Vector2( 4.55299, 4.55299 )

[node name="Slot 7" type="Area2D" parent="."]
position = Vector2( 0, 426 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot 7"]
position = Vector2( 89.5, 88.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Slot 7"]
position = Vector2( 89, 89 )
scale = Vector2( 4.55299, 4.55299 )

[node name="Slot 8" type="Area2D" parent="."]
position = Vector2( 214, 424 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot 8"]
position = Vector2( 89.5, 88.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Slot 8"]
position = Vector2( 89, 89 )
scale = Vector2( 4.55299, 4.55299 )

[node name="Slot 9" type="Area2D" parent="."]
position = Vector2( 424, 425 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot 9"]
position = Vector2( 89.5, 88.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Slot 9"]
position = Vector2( 89, 89 )
scale = Vector2( 4.55299, 4.55299 )

[node name="TurnIndicator" type="Sprite" parent="."]
position = Vector2( 18, 18 )
texture = ExtResource( 4 )

[node name="EndOfGameDisplay" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="EndOfGameDisplay"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 15.0272, 15.0266 )

[node name="Winner" type="Sprite" parent="EndOfGameDisplay"]
position = Vector2( 299, 177 )
scale = Vector2( 8.51692, 8.51692 )
texture = ExtResource( 4 )

[node name="WinText" type="Label" parent="EndOfGameDisplay"]
margin_left = 179.0
margin_top = 320.0
margin_right = 418.0
margin_bottom = 434.0
custom_colors/font_color = Color( 0.972549, 0.960784, 0.960784, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Wins!"

[node name="Button" type="Button" parent="EndOfGameDisplay"]
margin_left = 142.0
margin_top = 464.0
margin_right = 453.0
margin_bottom = 539.0
custom_fonts/font = SubResource( 3 )
text = "Play Again?"

[node name="TieText" type="Label" parent="EndOfGameDisplay"]
margin_left = 98.0
margin_top = 161.0
margin_right = 504.0
margin_bottom = 275.0
custom_fonts/font = SubResource( 4 )
text = "Tie Game"

[connection signal="input_event" from="Slot 1" to="Slot 1" method="_on_Slot_1_input_event"]
[connection signal="input_event" from="Slot 2" to="Slot 2" method="_on_Slot_1_input_event"]
[connection signal="input_event" from="Slot 3" to="Slot 3" method="_on_Slot_1_input_event"]
[connection signal="input_event" from="Slot 4" to="Slot 4" method="_on_Slot_1_input_event"]
[connection signal="input_event" from="Slot 5" to="Slot 5" method="_on_Slot_1_input_event"]
[connection signal="input_event" from="Slot 6" to="Slot 6" method="_on_Slot_1_input_event"]
[connection signal="input_event" from="Slot 7" to="Slot 7" method="_on_Slot_1_input_event"]
[connection signal="input_event" from="Slot 8" to="Slot 8" method="_on_Slot_1_input_event"]
[connection signal="input_event" from="Slot 9" to="Slot 9" method="_on_Slot_1_input_event"]
[connection signal="pressed" from="EndOfGameDisplay/Button" to="." method="_on_Button_pressed"]
